# dblift

./: .pre-commit-hooks.yaml  ARCHITECTURE.md  BRANCHING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.validation  Dockerfile.validation-lite  LICENSE  OSS_README.md  README.md  SECURITY.md  __init__.py  conftest.py  dblift-cosmosdb.yaml.template  dblift-sqlserver.yaml.template  docker-compose.yml  mkdocs.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-runtime.txt  requirements.txt  setup_cython.py
api/: __init__.py  _client_factory.py  _client_operations.py  _engine_config.py  async_client.py  client.py  events.py  migrations.py
cli/: _command_handlers.py  _config_helpers.py  _constants.py  _output.py  _parser_setup.py  export_schema_command.py  extensions.py  main.py  premium_manifest.py  snapshot_command.py
config/: config_builder.py  database_config.py  dblift_config.py  property_registry.py
core/: constants.py  dialect_boundary.py  features.py
db/: base_provider.py  base_quirks.py  constants.py  dml_analysis.py  error.py  feature_gate.py  object_naming.py  (+5 more)
templates/dblift-provider-cookiecutter/{{cookiecutter.project_slug}}/: pyproject.toml
templates/dblift-provider-cookiecutter/{{cookiecutter.project_slug}}/db/: __init__.py
templates/dblift-provider-cookiecutter/{{cookiecutter.project_slug}}/db/plugins/: __init__.py
templates/dblift-provider-cookiecutter/{{cookiecutter.project_slug}}/db/plugins/{{cookiecutter.dialect_name}}/: __init__.py  plugin.py  provider.py  quirks.py  sqlalchemy_url.py
(+941 files in other folders)
